PIT-460: updated collapsed status for criteria, updated styles for question and scores, added new tooltip (CSS only), bug fixes

--- a/searcher-evaluation-template-creator/src/styles/document.scss
+++ b/searcher-evaluation-template-creator/src/styles/document.scss
@@ -18,7 +18,8 @@
             content: '';
         }
 
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
 
             &:after {
                 padding: 15px;
@@ -57,7 +58,8 @@
         margin-top: 5px;
     }
 
-    &__filesize, $__timestamp {
+    &__filesize,
+    $__timestamp {
         color: #999999;
         font-size: 10px;
         text-align: center;
@@ -114,4 +116,51 @@ fieldset {
             border-left: 1px solid #5cb85c;
         }
     }
+}
+
+[data-tooltip] {
+    position: relative;
+    display: inline-block;
+    padding: 0;
+    color: #5bc0de;
+    background: #ffffff;
+    text-decoration: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+
+        &:after {
+            content: attr(data-tooltip);
+            font-family: Roboto, Lato, Helvetica, sans-serif;
+            font-size: 12px;
+            line-height: 1.5;
+            color: rgba(0, 0, 0, 0.6);
+        }
+    }
+
+    &:before {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-top: -20px;
+        margin-left: -5px;
+        border: 10px solid transparent;
+        border-bottom-color: 1px solid #eaeaea;
+    }
+}
+
+[data-tooltip]:after {
+    background: #ffffff;
+    border: 1px solid #eaeaea;
+    left: 50%;
+    margin-top: 13px;
+    font-size: 0.8em;
+    padding: 0.8em 1em;
+    position: absolute;
+    transform: translateX(-50%);
+    top: 100%;
+    width: 250px;
+    z-index: 1;
+    box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.1);
 }
